--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
     </header>
 
     <div class="container">
-        <div>
+        <div class="row">
             <div>
                <h3>About Us</h3>
                <hr>
@@ -49,8 +49,8 @@
         </div>
 
 
-        <div>
-            <div>
+        <div class="row row-content">
+            <div class="col-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
