--- a/index_old.html
+++ b/index_old.html
@@ -76,63 +76,6 @@
         </div>
     </div>
 
-    <div id="reserveModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title"><strong>Reserve a Table</strong></h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal">
-                        <div class="form-group row"> 
-                            <label for="numberguest" class="col-12 col-sm-3 control-label"><strong>Number of Guests</strong></label>
-                            <div class="col-12 col-sm-6">
-                                <label class="radio radio-inline"><input type="radio" name="modalradio" value="1"> 1</label>
-                                <label class="radio radio-inline"><input type="radio" name="modalradio" value="2"> 2</label>
-                                <label class="radio radio-inline"><input type="radio" name="modalradio" value="3"> 3</label>
-                                <label class="radio radio-inline"><input type="radio" name="modalradio" value="4"> 4</label>
-                                <label class="radio radio-inline"><input type="radio" name="modalradio" value="5"> 5</label>
-                                <label class="radio radio-inline"><input type="radio" name="modalradio" value="6"> 6</label>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="numberguest" class="col-12 col-sm-3 control-label"><strong>Section</strong></label>
-                            <div class="col-12 col-sm-6">
-                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-success active">
-                                        <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-smoking
-                                    </label>
-                                    <label class="btn btn-danger">
-                                        <input type="radio" name="options" id="option2" autocomplete="off">Smoking
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="datetime" class="col-12 col-sm-3 control-label"><strong>Date and Time</strong></label>
-                            <div class="col-12 col-sm-4">
-                                <input type="text" class="form-control" id="date" name="date"
-                                placeholder="Date">
-                            </div>
-                            <div class="col-12 col-sm-4">
-                                <input type="text" class="form-control" id="time" name="time"
-                                placeholder="Time">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-12 col-sm-6 offset-sm-3">
-                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>   
-                            </div> 
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -145,7 +88,8 @@
                         <img src="img/logo.png" class="img-fluid">
                     </div>
                     <div class="col-12 col-sm-6">
-                        <a style="font-family:Courier; font-size:18px" role="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                        <a style="font-family:Courier; font-size:18px" role="button" class="btn btn-warning btn-block" data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
+                            data-placement="bottom" href="#reserveform">Reserve Table</a>
                     </div>
                 </div>
             </div>
@@ -346,6 +290,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
