--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/styless.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     
 </head>
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginBtn" role="button">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>
            </div>
@@ -145,7 +145,7 @@
                         <img src="img/logo.png" class="img-fluid">
                     </div>
                     <div class="col-12 col-sm-6">
-                        <a style="font-family:Courier; font-size:18px" role="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                        <a id="reserveBtn" style="font-family:Courier; font-size:18px" role="button" class="btn btn-warning btn-block">Reserve Table</a>
                     </div>
                 </div>
             </div>
@@ -273,45 +273,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row row-content justify-content-center">
-            <div class="col-12 col-sm-8">
-                <div class="card">
-                    <form id="reserveform">
-                        <h3 class="card-header bg-warning text-white">Reserve A Table</h3>
-                        <div class="card-body">
-                            <div class="form-group row">
-                                <label for="numberguest" class="d-flex ml-2 col-8 col-sm-2 col-form-label"><strong>Number of Guests</strong></label>
-                                <div class="offset-sm-1 col-8 col-sm-6 align-self-center"><strong>
-                                    <label class="radio radio-inline"><input type="radio" name="optionsRadios" value="option1"> 1</label>
-                                    <label class="radio radio-inline"><input type="radio" name="optionsRadios" value="option2"> 2</label>
-                                    <label class="radio radio-inline"><input type="radio" name="optionsRadios" value="option3"> 3</label>
-                                    <label class="radio radio-inline"><input type="radio" name="optionsRadios" value="option4"> 4</label>
-                                    <label class="radio radio-inline"><input type="radio" name="optionsRadios" value="option5"> 5</label>
-                                    <label class="radio radio-inline"><input type="radio" name="optionsRadios" value="option6"> 6</label></strong>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="datetime" class="d-flex ml-2 col-8 col-sm-2 col-form-label"><strong>Date and Time</strong></label>
-                                <div class="offset-sm-1 align-self-center col-12 col-sm-3">
-                                    <input type="text" class="form-control" id="date" name="date"
-                                    placeholder="Date">
-                                </div>
-                                <div class="align-self-center ml-0 col-12 col-sm-3">
-                                    <input type="text" class="form-control" id="time" name="time"
-                                    placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-sm-3 col-sm-6 align-self-center">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>    
+        </div>   
     </div>
 
     <footer class="footer">
@@ -359,22 +321,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $("#mycarousel").carousel( { interval: 1000 } );
-            $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
-                    $("#mycarousel").carousel('pause');
-                    $("#carouselButton").children("span").removeClass('fa-pause');
-                    $("#carouselButton").children("span").addClass('fa-play');
-                }
-                else if ($("#carouselButton").children("span").hasClass('fa-play')){
-                    $("#mycarousel").carousel('cycle');
-                    $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass('fa-pause');                    
-                }
-            });
-        });
+    <script src="js/scripts.js"></script>
     </script>
 </body>
 
